--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,16 +12,16 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     {% if title %}
-        <title>𝒹𝓇𝑒𝒶𝓂 𝒷𝓁💞𝑔𝑔𝑒𝓇- {{ title }}</title>
+        <title> ~Créer un blog~ {{ title }}</title>
     {% else %}
-        <title>𝒹𝓇𝑒𝒶𝓂 𝒷𝓁💞𝑔𝑔𝑒𝓇</title>
+        <title> ~Créer un blog~ </title>
     {% endif %}
 </head>
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">𝒹𝓇𝑒𝒶𝓂 𝒷𝓁💞𝑔𝑔𝑒𝓇</a>
+          <a class="navbar-brand mr-4" href="/">Créer un blog</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -62,13 +62,13 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h3>🌺𝓊𝓇 𝒮𝒾𝒹𝑒𝒷𝒶𝓇 </h3>
-            <p class='text-muted'>You can blog any creative information you'd like🤗.
+            <h3>Barre latérale</h3>
+            <p class='text-muted'>You can blog any creative information you'd like!!.
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Fashion & Textiles👒</li>
-                <li class="list-group-item list-group-item-light">Animation & Digital Media😊</li>
-                <li class="list-group-item list-group-item-light">Graphics Designing😌</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+                <li class="list-group-item list-group-item-light">Fashion</li>
+                <li class="list-group-item list-group-item-light">Entertainment</li>
+                <li class="list-group-item list-group-item-light">Motivational Quotes</li>
+                <li class="list-group-item list-group-item-dark">and even way more!!</li>
               </ul>
             </p>
           </div>
