--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "layout.html"%}
  {% block content %}
-  <h1 style=" color: #fff;">𝒹𝓇𝑒𝒶𝓂 𝒷𝓁💞𝑔𝑔𝑒𝓇</h1>
+  <h1 style=" color: #fff;">Amazing Blog</h1>
   <hr>
   <p style="font-size: 20px; color: #000;">Its a web application that allows users to post their own blogs and creative ideas that make them standout from the rest🤗. It's a web application that allows users to post their blogs,update their blogs and even delete. The users are able to view updated blogs from their fellow colleagues.
   </p>
