making few changes

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,10 +1,7 @@
 {% extends "layout.html"%}
  {% block content %}
-  <h1 style=" color: #fff;">Amazing Blog</h1>
+  <h1 style=" color: #000; font-family: Macondo">Amazing Blog</h1>
   <hr>
-  <p style="font-size: 20px; color: #000;">Its a web application that allows users to post their own blogs and creative ideas that make them standout from the rest🤗. It's a web application that allows users to post their blogs,update their blogs and even delete. The users are able to view updated blogs from their fellow colleagues.
+  <p style="font-size: 24px;font-family: Koulen; color: #000; font-weight: bold">Its a web application that allows users to post their own blogs and creative ideas that make them standout from the rest. It's a web application that allows users to post their blogs,update their blogs and even delete. The users are able to view updated blogs from their fellow colleagues.
   </p>
-  <p style="font-size: 20px; color: #000;">
-  The First impression which makes this website stand out from the rest is this the motto: 𝔅𝔢𝔦𝔫𝔤 ℭ𝔯𝔢𝔞𝔱𝔦𝔳𝔢 𝔪𝔞𝔨𝔢 𝔦𝔱 𝔬𝔯 𝔟𝔯𝔢𝔞𝔨,  𝔶𝔬𝔲𝔯 𝔭𝔬𝔰𝔱𝔰 𝔠𝔞𝔫 𝔰𝔢𝔩𝔩 𝔦𝔡𝔢𝔞𝔰 </p>
- 
   {% endblock content%}
